# fileSync

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: block_info.hpp  config.hpp  data_transfer.cpp  data_transfer.hpp  delta_instruction.hpp  hash_utils.hpp  result.hpp  thread_pool.cpp  thread_pool.hpp
destination/: destination_manager.cpp  destination_manager.hpp
source/: source_manager.cpp  source_manager.hpp
sync/: client_mode.cpp  client_mode.hpp  client_session.cpp  client_session.hpp  server_mode.cpp  server_mode.hpp  sync_engine.cpp  sync_engine.hpp
